--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             map.addSource('park-boundaries', {
                 type: 'geojson',
                 // Use a URL for the value for the `data` property.
-                data: 'data/park-boundaries.geojson'
+                data: 'data/park-boundaries.zip'
             });
 
             map.addSource('national-parks', {
