--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             map.addSource('park-boundaries', {
                 type: 'htm',
                 // Use a URL for the value for the `data` property.
-                data: 'data/park-boundaries.htm'
+                data: 'data/park-boundaries.geojson.htm'
             });
 
             map.addSource('national-parks', {
                 type: 'htm',
-                data: 'data/national-parks.htm'
+                data: 'data/national-parks.geojson.htm'
         });
 
             map.addLayer({
